@@ -1,0 +1,116 @@
+# -*- coding: utf-8 -*-
+
+STOP_NAMES = dict()
+STOP_NAMES[200] = 'Daniel Junc' # צמת דניאל
+STOP_NAMES[300] = 'Peatei Modiin' # פאתי מודיעין
+STOP_NAMES[400] = 'Modiin Center' # מודיעין מרכז
+STOP_NAMES[500] = 'Teufa South' # תעופה דרום
+STOP_NAMES[600] = 'Teufa West' # תעופה מערב
+STOP_NAMES[700] = 'Kiriat Haim' # קרית חיים
+STOP_NAMES[800] = 'Motzkin' # קרית מוצקין
+STOP_NAMES[1100] = 'Haifa East' # חיפה מזרח
+STOP_NAMES[1200] = 'Zvulun Junc' # צומת זבולון
+STOP_NAMES[1220] = 'Lev Hamifratz' # לב המפרץ
+STOP_NAMES[1300] = 'Huzot Hamifratz' # חוצות מפרץ
+STOP_NAMES[1400] = 'Motzkin Oper' # מוצקין תפעולית
+STOP_NAMES[1500] = 'Akko' # עכו
+STOP_NAMES[1600] = 'Naaria' # נהריה
+STOP_NAMES[1700] = 'Rokach Bridge' # גשר רוקח
+STOP_NAMES[1800] = 'Naaman' # נעמן
+STOP_NAMES[2100] = 'Haifa Center' # חיפה מרכז
+STOP_NAMES[2200] = 'Bat Galim' # בת גלים
+STOP_NAMES[2300] = 'Hof Karmel' # חוף הכרמל
+STOP_NAMES[2400] = 'HaHotrim' # החותרים
+STOP_NAMES[2500] = 'Atlit' # עתלית
+STOP_NAMES[2600] = 'Dor' # דור
+STOP_NAMES[2700] = 'Zichron' # זכרון יעקב
+STOP_NAMES[2800] = 'Binyamina' # בנימינה
+STOP_NAMES[2820] = 'Kesaria' # קיסריה פרדס חנה
+STOP_NAMES[2900] = 'Shfaiim' # שפיים
+STOP_NAMES[3000] = 'Remez Junc' # צומת רמז
+STOP_NAMES[3100] = 'Hadera West' # חדרה מערב
+STOP_NAMES[3200] = 'Vitkin' # כפר ויתקין
+STOP_NAMES[3300] = 'Netanya' # נתניה
+STOP_NAMES[3400] = 'Bet Yeshua' # בית יהושע
+STOP_NAMES[3500] = 'Herzelia' # הרצליה
+STOP_NAMES[3600] = 'TA Uni' # תא אוניברסיטה
+STOP_NAMES[3700] = 'TA Center' # תל אביב מרכז
+STOP_NAMES[4000] = 'Tel Baruch Junc' # צומת תל ברוך
+STOP_NAMES[4100] = 'Bnei Brak' # בני ברק
+STOP_NAMES[4170] = 'K. Arie' # קרית אריה
+STOP_NAMES[4250] = 'Segula' # סגולה
+STOP_NAMES[4400] = 'Hemed Junc' # צומת חמד
+STOP_NAMES[4500] = 'Rosh Haain South' # ראש העין-דרום
+STOP_NAMES[4600] = 'TA Hashalom' # השלום
+STOP_NAMES[4640] = 'Holon Junc' # צומת חולון
+STOP_NAMES[4660] = 'Wolfson' # חולון וולפסון
+STOP_NAMES[4670] = 'Yoseftal Junc' # צומת יוספטל
+STOP_NAMES[4680] = 'Bat Yam Yoseftal' # בת ים יוספטל
+STOP_NAMES[4690] = 'Kommemiut' # בת ים קוממיות
+STOP_NAMES[4800] = 'Kfar Habad' # כפר חבד
+STOP_NAMES[4900] = 'TA Hagana' # תל אביב ההגנה
+STOP_NAMES[5000] = 'Lod' # לוד
+STOP_NAMES[5010] = 'Ramle' # רמלה
+STOP_NAMES[5100] = 'Zrifin Junc' # צומת צריפין
+STOP_NAMES[5150] = 'Ganei Aviv' # לוד-גני אביב
+STOP_NAMES[5200] = 'Rehovot' # רחובות
+STOP_NAMES[5300] = 'Beer Yakov' # באר יעקב
+STOP_NAMES[5400] = 'Yavne North' # יבנה  צפון
+STOP_NAMES[5410] = 'Yavne East' # יבנה מזרח
+STOP_NAMES[5500] = 'Pleshet Junc' # צומת פלשת
+STOP_NAMES[5800] = 'Ashdod' # אשדוד עד הלום
+STOP_NAMES[5900] = 'Ashkelon' # אשקלון
+STOP_NAMES[6100] = 'Naan' # נען
+STOP_NAMES[6200] = 'Sorek' # נחל שורק
+STOP_NAMES[6300] = 'Bet Semesh' # בית שמש
+STOP_NAMES[6400] = 'Bar Giora' # בר גיורא
+STOP_NAMES[6500] = 'JR ZOO' # ירושלים גן חיות
+STOP_NAMES[6600] = 'Beitar' # ביתר
+STOP_NAMES[6700] = 'JR Malha' # ירושלים מלחה
+STOP_NAMES[6800] = 'Kfar Menachem' # כפר מנחם
+STOP_NAMES[7000] = 'Kiriat Gat' # קרית גת
+STOP_NAMES[7200] = 'Dvira' # דבירה
+STOP_NAMES[7300] = 'BS North' # באר שבע-צפון
+STOP_NAMES[7320] = 'BS Center' # באר שבע מרכז
+STOP_NAMES[7400] = 'Ganot Junc' # צומת גנות
+STOP_NAMES[7500] = 'Dimona' # דימונה
+STOP_NAMES[8100] = 'Nevatim' # נבטים
+STOP_NAMES[8200] = 'Aroar' # ערוער
+STOP_NAMES[8300] = 'Ahuzam' # אחוזם
+STOP_NAMES[8400] = 'Tel Nagila' # תל נגילה
+STOP_NAMES[8500] = 'Lehavim South' # להבים דרום
+STOP_NAMES[8550] = 'Lehavim Rahat' # להבים רהט
+STOP_NAMES[8600] = 'Natbag' # נת-בג
+STOP_NAMES[8610] = 'Batbag Operational' # נתבג תפעולי
+STOP_NAMES[8700] = 'Kfar Saba' # כפר סבא
+STOP_NAMES[8800] = 'Rosh Haain North' # ראש העין-צפון
+STOP_NAMES[8900] = 'Rosh Haain West' # ראש העין-מערב
+STOP_NAMES[9000] = 'Yavna West' # יבנה מערב
+STOP_NAMES[9100] = 'Rishonim' # ראשונים
+STOP_NAMES[9200] = 'Hod Hashron' # הוד השרון
+STOP_NAMES[9300] = 'Nizanim' # ניצנים
+STOP_NAMES[9800] = 'Rishon Dayan' # רשל""צ משה דיין
+STOP_NAMES[9900] = 'Rishon South' # רשל""צ דרום
+
+REAL_STOP_IDS = [8550, 800, 6700, 7300, 8700, 1500, 4690, 4600, 3400, 4640, 4680, 4170, 8600, 5410, 400, 6300, 9600,
+                 2300, 5150, 5900, 7500, 9200, 8800, 9800, 1220, 4900, 9000, 2200, 7320, 3700, 5800, 5300, 2820, 2100,
+                 3300, 9100, 2500, 3500, 4660, 3100, 300, 4250, 6500, 700, 1300, 4800, 1600, 5000, 2800, 3600, 4100,
+                 5010, 5200, 7000]
+
+def is_real(stop_id):
+    return stop_id in REAL_STOP_IDS
+
+def get_stop_name(stop_id):
+    """ returns the stop_name of stop_id
+     if stop is not real, name if prefixed with -
+     if no stop name returns unicode(stop_id) and print warning
+    """
+    assert isinstance(stop_id,int)
+    is_real = stop_id in REAL_STOP_IDS
+    prefix = '-' if not is_real else ''
+    result = prefix + STOP_NAMES.get(stop_id,unicode(stop_id))
+    if stop_id not in STOP_NAMES:
+        print 'No stop name for %s - please fix in stops_utils.py' % stop_id
+    return result
+
+
